# RINS-TASK2

./: .command.kate-swp  README.md  command
data/: white_pelican
dis_tutorial7/: CMakeLists.txt
dis_tutorial7/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dis_tutorial7/install/dis_tutorial7/lib/dis_tutorial7/: arm_mover_actions.py  follow_bridge.py
dis_tutorial7/install/dis_tutorial7/share/dis_tutorial7/: local_setup.sh  package.sh
dis_tutorial7/install/dis_tutorial7/share/dis_tutorial7/launch/: sim_turtlebot_nav.launch.py
dis_tutorial7/launch/: sim_turtlebot_nav.launch.py
dis_tutorial7/log/: latest_build
dis_tutorial7/maps/: map.yaml
dis_tutorial7/scripts/: arm_mover_actions.py  detect_classify_birds.py  detect_people1.py  detect_rings.py  detect_rings1.py  follow_bridge.py  nlp_test.py  rings.py  robot_commander.py  robot_commander_.py  skeletonized_path.py  skeletonized_path_2.py
dis_tutorial7/scripts/old/: detect_rings_depth.py  skeletonized_path.py
dis_tutorial7/src/dis_tutorial3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dis_tutorial7/src/dis_tutorial3/launch/: sim_turtlebot_slam.launch.py
dis_tutorial7/src/dis_tutorial3/log/: latest_build
dis_tutorial7/src/dis_tutorial3/maps/: mapPoskus1.yaml
dis_tutorial7/src/dis_tutorial3/scripts/: robot_commander_new.py
dis_tutorial7/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dis_tutorial7/src/install/dis_tutorial3/share/dis_tutorial3/: local_setup.sh  package.sh
dis_tutorial7/src/log/: latest_build
(+65 files in other folders)
